--- a/yi-config.cabal
+++ b/yi-config.cabal
@@ -10,6 +10,7 @@ homepage:       https://github.com/noughtmare/yi-config#readme
 bug-reports:    https://github.com/noughtmare/yi-config/issues
 maintainer:     noughtmare@openmailbox.org
 license:        GPL-2
+license-file:   LICENSE
 build-type:     Simple
 cabal-version:  >= 1.10
 
@@ -34,16 +35,9 @@ executable yi
     , yi-rope >= 0.7.0.1
     , yi-keymap-vim >= 0.14.0
     , yi-frontend-vty >= 0.14.0
-    , process
-    , transformers-base
     , attoparsec
     , text
-    , binary
-    , data-default
-    , yi-language
-  other-modules:
-      InteroAPI
-      Yi.Intero
+    , yi-intero
   default-language: Haskell2010
 
 benchmark highlighter
@@ -62,12 +56,8 @@ benchmark highlighter
     , yi-rope >= 0.7.0.1
     , yi-keymap-vim >= 0.14.0
     , yi-frontend-vty >= 0.14.0
-    , process
-    , transformers-base
     , attoparsec
     , text
-    , binary
-    , data-default
-    , yi-language
+    , yi-intero
     , yi-language, criterion, deepseq
   default-language: Haskell2010
