--- a/stack.yaml
+++ b/stack.yaml
@@ -1,6 +1,24 @@
-resolver: lts-9.0
+resolver: lts-9.3
 packages:
     - .
-    - location: /home/jaro/haskell/yi/yi-intero
+    - location: /home/jaro/haskell/yi
+      subdirs:
+          - yi-core
+          - yi-mode-haskell
+          - yi-mode-javascript
+          - yi-misc-modes
+          - yi-frontend-vty
+          - yi-keymap-vim
+          - yi-keymap-cua
+          - yi-keymap-emacs
+          - yi-language
       extra-dep: true
+      #     - location: /home/jaro/haskell/yi/yi-intero
+      #       extra-dep: true
+      #     - location: /home/jaro/haskell/haskell-lsp-client
+      #       extra-dep: true
+      #     - location:
+      #         git: git@github.com:alanz/haskell-lsp.git
+      #         commit: HEAD
+      #       extra-dep: true
 extra-deps: []
